# claudIA

./: CLAUDE.md  README.md  install.sh  settings.json
claudia-skills/: catalog.toml  pyproject.toml
claudia-skills/src/claudia_skills/: __main__.py  app.py  installer.py  models.py  registry.py
skills/import-skills/: SKILL.md
skills/mock-api/: SKILL.md
