[project]
name = "claudia-skills"
version = "0.1.0"
description = "Install Claude Code skills into .claude/skills/ directories"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=0.89.0",
]

[project.scripts]
claudia = "claudia_skills.__main__:main"

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "ruff>=0.15.12",
    "ty>=0.0.35",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claudia_skills"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "S", "PERF", "T20", "LOG", "ASYNC", "C90", "UP"]
ignore = ["PERF401", "PERF403"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.format]
line-ending = "lf"
